--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
  <body>                                                                                                            
     <h2 id="titulo">Hola Coders!</h2>
 
-    <script src="JS/script.js"></script>
+    <script src="JS/script2.js"></script>
  </body>
 </html>     
