--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <title>New App</title>
+    <title>Mobel House</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
  </head>
  <body>                                                                                                            
     <h2 id="titulo">Hola Coders!</h2>
 
-    <script src="JS/script2.js"></script>
+    <div id="catalogo">
+    </div>
+
+    <div id="formulario"></div>
+
+    <script src="JS/script3.js"></script>
  </body>
 </html>     
