--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <div id="catalogo">
     </div>
 
-    <div id="formulario"></div>
+    <!-- <div id="formulario"></div>
+
+    <button id="primerBoton">Clickeame</button>
+-->
+    <input type="text" id="categoria"/> 
+    <button id="filtrar">Filtrar</button>
+    <button id="todos">Ver todos los productos</button>
+
+    <!-- <form id="formulario">
+      <input type="text">
+      <input type="number">
+      <input type="submit" value="Enviar">
+   </form> -->
 
     <script src="JS/script3.js"></script>
  </body>
