--- a/Practica General/index.html
+++ b/Practica General/index.html
@@ -24,6 +24,6 @@
       <input type="submit" value="Enviar">
    </form> -->
 
-    <script src="JS/script3.js"></script>
+    <script src="JS/script.js"></script>
  </body>
 </html>     
