--- a/Lista/index.html
+++ b/Lista/index.html
@@ -18,6 +18,7 @@
             <button id="add-button" class="pretty-button">Agregar tarea</button>
             <button id="clear-button" class="pretty-button">Eliminar completadas</button>
             <button id="empty-button" class="pretty-button">Vaciar lista</button>
+            <button id="save-button" class="pretty-button">Guardar lista</button>
 
             <ol id="todo-list">
             </ol>
